# Cpp_Projects

./: README.md
Atari-Games/: .gitignore  Fall Ball.cpp  Flappy Bird.cpp  README.md  Silver Spacecraft.cpp  Squash.cpp
Beneficial-C_programming/: README.md
Benfetial-C_programming/: LICENSE  README.md
CPP20_Develop/: LICENSE  README.md
Chess_3D/: README.md
Chess_Engine/: .gitignore  README.md  TODO.org
Collatz/: .gitignore  README.md  collatz.cpp  collatz.hpp  main.cpp
CustomizedOperators/: README.md  containers.h  fuzzy-comparisons.h  mage-hand.h  test.cpp
Demystifying_Guard/: README.md
Design-Patterns/: README.md
Dump_c++/: .gitattributes  LICENSE  README.md  abidump.c  abidump_demangle.cc  meson.build
FileLockSocket/: MakeFile  README.md
GenXPassword/: .gitignore  GenPassword.pro  GenXPassword.pro  README.md
Hangman/: CMakeLists.txt  README.md  main.cpp  words.csv
Hangman-game/: README.md  hangman  hangman.c  hangman.h
InjectHook/: LICENSE  README.md
JsonConverter/: README.md  ccdJsonppConfigVersion.cmake.in
JsonConverter/example/: CMakeLists.txt
JsonConverter/example/src/: accessValues.cpp  fromCode.cpp  fromString.cpp
JsonConverter/src/: CMakeLists.txt  Value.cpp
KeyToValue/: .gitignore  Makefile  README.md
MarbleMarcher/: .gitignore  README.md
Matrix_ScreenSaver/: Makefile  README.md  config.h  main.c  matrix
ModelZbt/: LICENSE  README.md  m3d.h  m3d_lua.h
Mojan/: .gitignore  Makefile  README.md  install.sh
OpenGL_examples/: README.md  build
POng/: LICENSE  Makefile  README.md
Pipes_ScreenSaver/: Makefile  README.md  config.h  main.c  pipes
Random_Utility_tools/: README.md
RegularExpression_Convertors/: README.md
SFML_Multithread_verlet/: README.md
Simple-Code/: README.md
SystemMonitor/: README.md
Template_Language_Generator/: Makefile  README.md  cgen
Terminal_File_Manager/: .clang-format  .gitignore  README.md
Terminal_Snake/: .gitignore  Makefile  README.md
Thread_Pool/: .gitignore  CMakeLists.txt  README.md  ThreadPool.h  test.cpp
Tokenizer_tok/: README.md
Trigonometric-Functions/: CMakeLists.txt  README.md  functions.h  main.cpp  types.h
ViteFA_config/: README.md
WordProc/: .gitignore  CMakeLists.txt  README.md
WordProc/scripts/: Distclean.sh
WordProc/sources/: CMakeLists.txt  Main.cxx  MainWindow.cxx  MainWindow.hxx  MainWindow.ui  Resources.qrc  SearchWindow.cxx  SearchWindow.hxx  SearchWindow.ui  TextWindow.cxx  TextWindow.hxx  TextWindow.ui  Types.cxx  Types.hxx  i18n_Dutch.ts  i18n_English.ts  i18n_French.ts  i18n_German.ts  i18n_Italian.ts  i18n_Spanish.ts  moc_MainWindow.cpp  moc_SearchWindow.cpp  moc_TextWindow.cpp  qrc_Resources.cpp  ui_MainWindow.h  ui_SearchWindow.h  ui_TextWindow.h
canChat/: README.md
chess-engine/: CMakeLists.txt  README.md
chess-engine/include/: board.hpp  utils.hpp
chess-engine/src/: board.cpp  debug.hpp  evaluate.hpp  load_fen.cpp  move_gen.cpp  pawn_move_gen.cpp  search.hpp  zobrist.hpp
cordic_verilog/: Dockerfile  LICENSE  Makefile  README.md
cpp-password-generator/: README.md  pg.cpp
define_evil/: LICENSE  README.md  define_EVIL.h  generated_EVIL.h  generator.sh  tests.c
design-patterns/: .gitignore  README.md
design-patterns/abstract-factory-pattern/: ButtonedUpShirt.cpp  ButtonedUpShirt.h  CMakeLists.txt  CargoPants.cpp  CargoPants.h  ClothesFactory.h  DayOffClothesFactory.cpp  DayOffClothesFactory.h  DressShoes.cpp  DressShoes.h  Pants.h  Shirt.h  Shoe.h  Slacks.cpp  Slacks.h  Sneakers.cpp  Sneakers.h  TShirt.cpp  TShirt.h  WorkClothesFactory.cpp  WorkClothesFactory.h  main.cpp
design-patterns/command-pattern/: ACNotAvailableException.h  ACRemote.cpp  ACRemote.h  AirConditioner.cpp  AirConditioner.h  CMakeLists.txt  CommandNotFound.h  ICommand.h  RaiseTempCommand.cpp  RaiseTempCommand.h  TurnOnCommand.cpp  TurnOnCommand.h  main.cpp
design-patterns/decorator-pattern/: Beverage.h  BeverageDecorator.h  CMakeLists.txt  Caramel.cpp  Caramel.h  Cinnamon.cpp  Cinnamon.h  Espresso.cpp  Espresso.h  EspressoShot.cpp  EspressoShot.h  Mocha.cpp  Mocha.h  Soy.cpp  Soy.h  main.cpp
design-patterns/observer-pattern/: CMakeLists.txt  IObservable.h  IObserver.h  WeatherMeasurementService.cpp  WeatherMeasurementService.h  WeatherStation1.h  WeatherStation2.h  main.cpp
design-patterns/strategy-pattern/: CMakeLists.txt  CityDuck.h  CountryDuck.h  Duck.h  FancyFlyingBehavior.cpp  FancyFlyingBehavior.h  FreeFlyingBehavior.h  IFlyBehavior.h  IQuackBehavior.h  NoFlyingBehavior.h  NoQuackBehavior.h  SimpleFlyingBehavior.cpp  SimpleFlyingBehavior.h  SimpleQuackBehavior.cpp  SimpleQuackBehavior.h  main.cpp
introspective/: CMakeLists.txt  README.md
introspective/example/: JuliaExample.cpp  LuaExample.cpp  WrenExample.cpp
introspective/include/: introspective.h
javascript-compiler/: README.md
jsonpp/: CMakeLists.txt  README.md  ccdJsonppConfig.cmake
jsonpp/src/: JsonPP.cpp
mage-hand/: comparisons.h  generate-literal-operators.cpp  match.h  math.h  meson.build  type-traits.h
miniShell/: .gitignore  Makefile  README.md  vg_supp
moderncli/: .clang-tidy  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  config.hpp.in  moderncli.pc.in
moderncli/cmake/: coverage.cmake  cppcheck.cfg  features.cmake  linting.cmake  project.cmake  tidy.cfg
moderncli/headers/: args.hpp  digest.hpp  endian.hpp  filesystem.hpp  keyfile.hpp  print.hpp  serial.hpp  strings.hpp  sync.hpp
moderncli/test/: compiler.hpp  digest.cpp  endian.cpp  keyfile.cpp  serial.cpp  shell.cpp  strings.cpp  sync.cpp  test.conf
mothbar/: LICENSE  Makefile  README.md  declarations.h  m_clock.c  m_desk.c  mothbar.c
ofxAsync/: README.md  addon_config.mk
packsend/: Makefile  README.md  packsend.c
simplesdl2_game_template/: CMakeLists.txt  README.md
simplesdl2_game_template/include/: common.h  gamehandler.h  gamemanager.h  input.h  object.h  tasker.h
simplesdl2_game_template/src/: gamehandler.cpp  gamemanager.cpp  input.cpp  main.cpp  object.cpp  tasker.cpp
tfm/: .clangd  CMakeLists.txt  README.md  TODO.org
tfm/src/: cmd_loop.hpp  fs_utils.hpp  main.cpp  ncurses_win.hpp
(+635 files in other folders)
